syntax = "proto3";

package user.v1;

service UserService {
  rpc CreateUser (CreateUserInput) returns (User) {}
  rpc Login (LoginInput) returns (User);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
}

message CreateUserInput {
  string username = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
}

message LoginInput {
  string email = 1;
  string password = 2;
}
