syntax = "proto3";

package user;

service UsersService {
  rpc FindOne (UserRequest) returns (User);
  rpc FindMany (UsersRequest) returns (ListUser);
}

message User {
  int32 id = 1;
  string name = 2;
}

message UserRequest {
  int32 id = 1;
}

message UsersRequest {
  repeated int32 ids = 1;
}

message ListUser {
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;

    repeated User users = 4;
}
